--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "i18next": "^25.7.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.546.0",
     "prop-types": "^15.8.1",
@@ -36,6 +38,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.3.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.15",
     "yup": "^1.7.1"
